[package]
name = "actix-session"
version = "0.6.0"
authors = ["Caleb Wren <caleb_wren@me.com>"]
description = "Sessions for Actix Web"
keywords = ["http", "web", "framework", "async", "session"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-extras.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "actix_session"
path = "src/lib.rs"

[features]
default = ["redis-session"]
cookie-session = []
redis-session = ["fred", "rand", "url", "percent-encoding"]

[dependencies]
actix-service = "2"
actix-utils = "3"
actix-web = { version = "4.0.0", default_features = false, features = ["cookies", "secure-cookies"] }

async-trait = "0.1"
derive_more = "0.99.17"
futures-util = { version = "0.3.7", default-features = false }
time = "0.3"
serde = { version = "1.0.101" }
serde_json = { version = "1.0.40" }
rand = { version = "0.8.0", optional = true }
tracing = { version = "0.1.29", default-features = false, features = [ "log" ] }
anyhow = "1.0.51"

# redis-session
fred = { version = "5.0.0-beta.1", optional = true }
url = { version = "2.2.2", optional = true }
percent-encoding = { version = "2.1", optional = true }

[dev-dependencies]
actix-session = { path = ".", features = ["cookie-session", "redis-session"] }
actix-web = { version = "4", default_features = false, features = ["cookies", "secure-cookies", "macros"] }
actix-rt = "2"
actix-test = "0.1.0-beta.13"
env_logger = "0.8"

[[example]]
name = "basic"
required-features = ["redis-session"]

[[example]]
name = "authentication"
required-features = ["redis-session"]